Added debt tracking

--- a/ui.kv
+++ b/ui.kv
@@ -357,7 +357,7 @@
 					Spinner:
 						id: category_field
 						text: "Food"
-						values: ["Food","Home","Transportation","Personal","Rent","House EMI","Gym","Utilities","Shopping","Petrol","Subscription/Recharge","Book","Credit Card Bill", "Credit Card UPI Bill", "Savings","Savings RD","Savings FD","Savings Gold","Others"]
+						values: ["Food","Home","Transportation","Personal","Rent","House EMI","Gym","Utilities","Shopping","Petrol","Subscription/Recharge","Book","Credit Card Bill", "Credit Card UPI Bill", "Savings","Savings RD","Savings FD","Savings Gold","Debt Cleared","Others"]
 					Label:
 						text: "Device"
 						color: rgba("#E2E8F0FF")
@@ -366,7 +366,7 @@
 					Spinner:
 						id: device_spinner
 						text: "UPI"
-						values: ["Cash","UPI","CREDIT_CARD", "CREDIT_CARD_UPI"]
+						values: ["Cash","UPI","CREDIT_CARD", "CREDIT_CARD_UPI", "DEBT_BORROWED"]
 					Label:
 						text: "Date"
 						color: rgba("#E2E8F0FF")
