--- a/ui.kv
+++ b/ui.kv
@@ -777,16 +777,31 @@
 			text_size: self.size
 			valign: "middle"
 			opacity: 1 if root.shared_text else 0
-	Button:
+	BoxLayout:
 		size_hint: None, None
-		size: dp(24), dp(24)
-		background_normal: ""
-		background_color: 0, 0, 0, 0
-		color: rgba("#FCA5A5FF")
-		text: "X"
-		font_size: sp(16)
-		bold: True
-		on_release: app.root.get_screen("transactions").delete_transaction(root.transaction_id)
+		size: dp(60), dp(24)
+		spacing: dp(4)
+		Button:
+			size_hint: None, None
+			size: dp(24), dp(24)
+			background_normal: ""
+			background_color: 0, 0, 0, 0
+			color: rgba("#86EFACFF")
+			font_name: "data/fonts/DejaVuSans.ttf"
+			text: "✎"
+			font_size: sp(16)
+			bold: True
+			on_release: app.root.get_screen("transactions").edit_transaction(root.transaction_id)
+		Button:
+			size_hint: None, None
+			size: dp(24), dp(24)
+			background_normal: ""
+			background_color: 0, 0, 0, 0
+			color: rgba("#FCA5A5FF")
+			text: "-"
+			font_size: sp(16)
+			bold: True
+			on_release: app.root.get_screen("transactions").delete_transaction(root.transaction_id)
 
 <CategorySummaryRow@BoxLayout>:
 	category_text: ""
